frontend/test/should_fail/retype_019paroptalt.grg
using retype_model_001;

rule r {
	x:TYPE1;

	optional {
		modify {
			y:TYPE2<x>;
		}
	}

	alternative {
		First_ {
			modify {
				y:TYPE2<x>;
			}
		}
		Second_ {
			modify {}
		}
	}

	modify {
	}
}

